Bug 281452 - Information Panel should 'refresh' preview when re-shown after being hidden
Summary: Information Panel should 'refresh' preview when re-shown after being hidden
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 16.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-06 07:38 UTC by Kevin Brubeck Unhammer
Modified: 2011-12-06 17:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
patch to show current preview (2.28 KB, patch)
2011-12-05 09:05 UTC, A JANARDHAN REDDY
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Brubeck Unhammer 2011-09-06 07:38:15 UTC
Version:           unspecified (using KDE 4.7.0) 
OS:                Linux

I would like to use the infopanel as a poor-man's Quick Look, so that I can keep it detached and huge and just turn it on when I want a quick preview of something. However, since it doesn't refresh when I turn it on, I have to move the mouse off the selected image, then onto it again. Not very easy if the infopanel is detached and thus hiding the icon of the image I want to preview.

Reproducible: Always

Steps to Reproduce:
Turn on infopanel. 
Hover over an image to get a preview.
Press F11 to turn off the infopanel.
Select some other image.
Turn on the infopanel.


Actual Results:  
Old preview (of no-longer-selected image) showing.

Expected Results:  
Preview of the selected image showing.

Something like http://forum.kde.org/brainstorm.php#idea89330_page1 would of course be preferable, but this seems like it should be fixed in any case (and doesn't seem like it should be too difficult?).
Comment 1 Frank Reininghaus 2011-09-11 13:27:08 UTC
Thanks for the bug report! I can confirm the issue in master.
Comment 2 A JANARDHAN REDDY 2011-12-05 09:05:21 UTC
Created attachment 66392 [details]
patch to show current preview

selection is passed to the seturl function, but while the panel is invisible , this selection value is ignored and nothing is done, this patch makes dolphin just to remember the current selection and return immediately if info panel is invisible
Comment 3 Peter Penz 2011-12-05 09:15:25 UTC
Thanks a lot for the patch! Looks good - please let me do some tests (I should have some time tomorrow) and I'll push it then :-)
Comment 4 Peter Penz 2011-12-06 17:53:54 UTC
Git commit 90fb314fc4efbd583928f891a6efbc88ca6fa075 by Peter Penz.
Committed on 06/12/2011 at 18:49.
Pushed by ppenz into branch 'master'.

Fix selection issue for Information Panel

When the selection changes during the Information Panel is
invisible, it still should get applied so that when making the
Information Panel visible again a valid selection is shown.

Thanks to A. Janardhan Reddy for the patch!

(Additionally the obsolete check for an empty selection has
been removed, as this cannot happen anymore with the new view
engine)

BUG: 281452
FIXED-IN: 4.8.0

M  +3    -11   dolphin/src/panels/information/informationpanel.cpp

http://commits.kde.org/kde-baseapps/90fb314fc4efbd583928f891a6efbc88ca6fa075